fix(social-3): debug social component spacing on mobile devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,6 @@
   }
 
   .tech-item {
-    @apply bg-neutral-800 h-8 px-1 rounded-md flex flex-row items-center gap-1;
+    @apply bg-neutral-800 h-8 px-1 rounded-md flex flex-row items-center gap-1 pointer-events-none;
   }
 }
